fixed grid row overlaps

--- a/src/index.scss
+++ b/src/index.scss
@@ -58,7 +58,7 @@ body {
       "hd hd hd hd   hd   hd   hd   hd   hd"
       "sd sd sd sd   sd   sd   sd   sd   sd"
       "main main main main main main main main main";
-    grid-auto-rows: 74px calc(100vh - 74px) auto;
+    grid-auto-rows: unset;
   }
 
   @include respond(phone) {
